HW2/part4/t46.output
running e2c
compiling the C generated code
t46.c: In function ‘main’:
t46.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t46.c:5:2: error: expected expression before ‘=’ token
  = 23;
  ^
t46.c:6:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t46.c:8:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t46.c:8:1: warning: useless type name in empty declaration
t46.c:9:2: error: expected expression before ‘=’ token
  = 999;
  ^
t46.c:10:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t46.c:11:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t46.c:12:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t46.c:13:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t46.c:13:1: warning: useless type name in empty declaration
t46.c:14:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t46.c:15:2: error: expected expression before ‘=’ token
  = 44;
  ^
t46.c:16:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:17:2: error: expected expression before ‘=’ token
  = 11;
  ^
t46.c:18:2: error: expected expression before ‘=’ token
  =  - 10000;
  ^
t46.c:20:1: warning: useless type name in empty declaration
 int ;
 ^
t46.c:21:2: error: expected expression before ‘=’ token
  = 77;
  ^
t46.c:22:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:23:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:24:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t46.c:25:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:26:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t46.c:27:2: error: expected expression before ‘=’ token
  =  - 100;
  ^
t46.c:28:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:29:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:30:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:31:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:32:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:33:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:34:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:35:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:36:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:37:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:38:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:39:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t46.c:40:1: error: expected declaration or statement at end of input
 }
 ^
t46.c:40:1: error: expected declaration or statement at end of input
t46.c:40:1: error: expected declaration or statement at end of input
